--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -119,6 +119,19 @@
 			<version>2.7.0</version>
 		</dependency>
 
+		<!-- Logging -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.4</version>
+		</dependency>
+
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
