--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -36,3 +36,7 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.deep-linking=false
 springdoc.swagger-ui.path=/swagger
+
+# Logging
+logging.pattern.level=%5p [%X{traceId:-},%X{spanId:-}]
+logging.file.name=logs/app.log
