--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,32 @@ services:
     networks:
       - backend
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+    ports:
+      - "9200:9200"
+
+  logstash:
+      image: docker.elastic.co/logstash/logstash:7.17.10
+      container_name: logstash
+      volumes:
+        - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      ports:
+        - "5000:5000"     # TCP log input
+        - "9600:9600"     # Monitoring API
+
+  kibana:
+      image: docker.elastic.co/kibana/kibana:7.17.10
+      container_name: kibana
+      ports:
+        - "5601:5601"
+      environment:
+        - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+
   team-db:
     image: postgres:15
     container_name: team-db
