--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,15 +78,18 @@ services:
   logstash:
       image: docker.elastic.co/logstash/logstash:7.17.10
       container_name: logstash
+      depends_on:
+        - elasticsearch
       volumes:
-        - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+        - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
       ports:
-        - "5000:5000"     # TCP log input
-        - "9600:9600"     # Monitoring API
+        - "5000:5000"
 
   kibana:
       image: docker.elastic.co/kibana/kibana:7.17.10
       container_name: kibana
+      depends_on:
+        - elasticsearch
       ports:
         - "5601:5601"
       environment:
