--- a/logstash.conf
+++ b/logstash.conf
@@ -1,13 +1,7 @@
 input {
-  tcp {
+  http {
     port => 5000
-    codec => json_lines
-  }
-}
-
-filter {
-  json {
-    source => "message"
+    codec => json
   }
 }
 
@@ -16,5 +10,8 @@ output {
     hosts => ["http://elasticsearch:9200"]
     index => "microservice-logs-%{+YYYY.MM.dd}"
   }
-  stdout { codec => rubydebug }
+
+  stdout {
+    codec => rubydebug
+  }
 }
