--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -112,6 +112,18 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- Logging -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
