--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,3 +9,7 @@ server.port=8081
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
+
+# Logging
+logging.pattern.level=%5p [%X{traceId:-},%X{spanId:-}]
+logging.file.name=logs/app.log
