--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -99,6 +99,12 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!-- Quartz -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
