--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ Thumbs.db
 #.env
 .env
 *.env
+
+# firebase secret
+/notification-service/src/main/resources/firebase/firebase-service-account.json
