--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,5 @@ Thumbs.db
 .env
 *.env
 
-# firebase secret
-/notification-service/src/main/resources/firebase/firebase-service-account.json
+#Secrets
+*.json
