--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,4 +1,24 @@
 spring.application.name=notification-service
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
-# Firebase config
+# Server
+grpc.server.port=9094
+server.port=8084
+
+# Eureka client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Kafka Consumer
+spring.kafka.consumer.group-id=notification-service-group
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+# Firebase
 firebase.config.path=src/main/resources/firebase/firebase-service-account.json
