--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -21,7 +21,6 @@
 		<java.version>17</java.version>
 		<lombok.version>1.18.30</lombok.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
-		<grpc.version>1.61.0</grpc.version>
 	</properties>
 
 	<dependencies>
@@ -88,21 +87,9 @@
 
 		<!-- gRPC & Protobuf -->
 		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-netty-shaded</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-protobuf</artifactId>
-			<version>${grpc.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.grpc</groupId>
-			<artifactId>grpc-stub</artifactId>
-			<version>${grpc.version}</version>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-spring-boot-starter</artifactId>
+			<version>2.15.0.RELEASE</version>
 		</dependency>
 
 		<!-- Testing Dependencies -->
