--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -22,6 +22,10 @@ grpc.client.notification-service.address=discovery:///notification-service
 grpc.client.notification-service.negotiation-type=plaintext
 grpc.client.notification-service.enable-keep-alive= true
 
+grpc.client.document-service.address=discovery:///document-service
+grpc.client.document-service.negotiation-type=plaintext
+grpc.client.document-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
