--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>plan-service</module>
         <module>notification-service</module>
         <module>document-service</module>
+        <module>session-service</module>
         <module>api-gateway</module>
     </modules>
 
