--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -26,6 +26,10 @@ grpc.client.document-service.address=discovery:///document-service
 grpc.client.document-service.negotiation-type=plaintext
 grpc.client.document-service.enable-keep-alive= true
 
+grpc.client.session-service.address=discovery:///session-service
+grpc.client.session-service.negotiation-type=plaintext
+grpc.client.session-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
