--- a/chat-service/pom.xml
+++ b/chat-service/pom.xml
@@ -98,6 +98,12 @@
             <version>2.15.0.RELEASE</version>
         </dependency>
 
+        <!-- Redis -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
