--- a/chat-service/src/main/resources/application.properties
+++ b/chat-service/src/main/resources/application.properties
@@ -1,6 +1,16 @@
 spring.application.name=chat-service
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:local}
 
-#gRPC Client
+# Server
+grpc.server.port=9096
+server.port=8086
+
+# Eureka client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
+
+# gRPC Client
 grpc.client.user-service.address=discovery:///user-service
 grpc.client.user-service.negotiationType=plaintext
 grpc.client.user-service.enable-keep-alive=true
@@ -12,3 +22,13 @@ grpc.client.team-service.enable-keep-alive= true
 grpc.client.document-service.address=discovery:///document-service
 grpc.client.document-service.negotiation-type=plaintext
 grpc.client.document-service.enable-keep-alive= true
+
+# Kafka Producer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Kafka Consumer
+spring.kafka.consumer.enable-auto-commit=true
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
