--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -30,6 +30,10 @@ grpc.client.session-service.address=discovery:///session-service
 grpc.client.session-service.negotiation-type=plaintext
 grpc.client.session-service.enable-keep-alive= true
 
+grpc.client.chat-service.address=discovery:///chat-service
+grpc.client.chat-service.negotiation-type=plaintext
+grpc.client.chat-service.enable-keep-alive= true
+
 # Eureka Client
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
